--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Texturina:wght@100;400;500;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;700&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #1E222E;
-  color: #C4C4C4;
+  background-color: #242526;
+  color: #F5F6F7;
 }
 
 a {
@@ -16,7 +15,50 @@ a {
 
 * {
   box-sizing: border-box;
-  font-family: 'Texturina', serif;
+  font-family: 'Oxygen', sans-serif;
+}
+
+.container {
+  display: flex;
+  width: 100vw;
+}
+
+.header {
+  display: inline-flex;
+  width: 70vw;
+  height: 40px;
+  margin: 10px;
+  padding: 0px 50px;
+  justify-content: space-between;
+  align-items: center;
+  border: solid 1px #F57922;
+}
+
+.header a {
+  font-size: 20px;
+  margin-bottom: 5px;
+  color: #C4C4C4;
+}
+
+.main_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.avatar_container {
+  display: flex;
+  width: 30vw;
+  height: calc(100vh - 20px);
+  margin: 10px;
+  justify-content: center;
+  border: solid 1px #F57922;
+}
+
+.content_container {
+  height: calc(100vh - 80px);
+  margin: 10px;
+  border: solid 1px #F57922;
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar {
